fix: reduction meter align -6dB

--- a/client/assets/css/ReductionMeter.css
+++ b/client/assets/css/ReductionMeter.css
@@ -1,17 +1,18 @@
 .reductionmeter-body {
     top: 0.8vh;
-    width: 2vw;
+    width: 24px;
     margin-top: 15px;
     margin-left: 5px;
     background-color: black;
     border-radius: 7px;
+    font-size: 14px;
 }
 
 .reductionmeter-canvas {
     width: 10px;
     margin-left: -5px;
     bottom: 0px;
-    height: 100%;
+    height: 240x;
 }
 
 .reductionmeter-lower-part {
@@ -34,15 +35,13 @@
     color: #445f4a;
     width: 63px;
     height: 2px;
-    margin-left: -58px;
-    margin-right: 30px;
-    margin-top: 108px;
+    margin-left: -6px;
+    margin-top: -105px;
 }
 .reduction-12db {
     color: #5c3939;
     width: 63px;
     height: 2px;
-    margin-left: -88px;
-    margin-right: 30px;
-    margin-top: 152px;
+    margin-left: 2px;
+    margin-top: 50px;
 }
